      - Update the format to include the new severity/certainty info.
      - Include information whether the tag is experimental.
      - Move the detailled override info to the end but include info
        flag about the override status in the same column that also
        includes the experimental flag info.
  * lib/Lintian/Schedule.pm:
    + [FL] Factor out some scheduling code.
  * lib/Lintian/Data.pm:
    + [FL] Extend Lintian::Data to handle key/value pairs.  Patch by
      Niko Tyni.
  
  * man/lintian.1:
    + [FL] Document udeb support in description for --packages-file.
  
  * t/runtests:
    + [FL] Copy the changes to testset/runtests from JP's branch.
    + [FL] Remove global tests that were duplicated from testset/runtests,
      which will not go away in the forseeable future.
    + [FL] Print a warning if no tests were run.  Based on a patch by
      Raphael Geissert.
    + [RA] Fix single test mode.
  * testset/runtests:
    + [FL] Print a warning if no tests were run.  Based on a patch by
      Raphael Geissert.

 -- Frank Lichtenheld <djpig@debian.org>  Sat, 23 Aug 2008 22:55:44 +0200

lintian (1.24.4) unstable; urgency=low

  The "[JP] is Jordà Polo" release.
  
  * checks/*.desc:
    + [JP] Update, fix and unify various manual references. 
  * checks/copyright-file:
    + [ADB] Don't flag copyright files using phrases such as "previously
      distributed under the GNU GPL" as lacking a reference to the license.
      Thanks Raphael Geissert.
  * checks/cruft{,.desc}:
    + [FL] Add new check for outdated libtool files.
      (Closes: #293296)
    + [FL] Don't exclude all of lintian, but only files in the test suites.
  * checks/files{,.desc}:
    + [ADB] Don't warn about embedded Javascript libraries in the package
      that actually provides the library. Thanks Raphael Geissert for
      pointing out the problem.  (Closes: #494577)
    + [ADB] Enhance the description of package-contains-empty-directory to